fixed mobile version and the problematic positionings

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 
     @include onDeskTop {
       flex-direction: column;
@@ -36,7 +37,7 @@
     justify-content: space-between;
     margin-top: 40px;
     margin-left: 20px;
-    gap: 20px;
+    gap: 30px;
     margin-bottom: 80px;
 
     @include onDeskTop {
@@ -53,7 +54,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 150px;
+    width: 100%;
     margin-left: 20px;
     margin-right: 20px;
 
@@ -128,19 +129,22 @@
   }
 
   &__toTheTop {
-    display: flex;
-    justify-content: center;
     position: absolute;
     bottom: 0;
     right: 0;
-    height: 12px;
     padding: 19px;
     border: 1px solid #1a5a4c;
     border-radius: 50%;
     margin-bottom: 20px;
 
     &--img {
-      padding-bottom: 100%;
+      position: absolute;
+    }
+
+    &--link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     @include onDeskTop {
