--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -4,6 +4,11 @@
   grid-template-columns: repeat(1, 1fr);
   /*column-gap: 20px;*/
 
+  @include onTablet {
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 30px;
+  }
+
   @include onDeskTop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 24px;
