--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,6 +1,7 @@
 .container {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
   position: relative;
-  max-width: 1340px;
-  padding: 0 30px;
-  margin: 0 auto;
+  width: 100%;
 }
