--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,10 +1,10 @@
-/*.swidiver {
+/*.swiper {
   &-slide {
     margin: 20px;
     width: 100vw;
   }
 
-  &-divicture {
+  &-picture {
     max-width: 100vw;
   }
 
@@ -18,8 +18,41 @@
 }*/
 
 .gallery {
-  margin-top: 200px;
-  padding-top: 200px;
+  margin: 120px 20px;
+  padding-bottom: 230px;
+
+  @include onDeskTop {
+    margin: 200px 55px;
+    padding-top: 200px;
+  }
+
+  &__photo-wrapper-type1 {
+    display: none;
+
+    @include onTablet {
+      display: grid;
+    }
+  }
+
+  &__photo-wrapper-type2 {
+    display: none;
+
+    @include onDeskTop {
+      display: grid;
+    }
+  }
+
+  &__photo-wrapper-type3 {
+    display: grid;
+
+    @include onTablet {
+      display: none;
+    }
+
+    @include onDeskTop {
+      display: grid;
+    }
+  }
 
   &__photo-container {
     position: relative;
@@ -27,7 +60,6 @@
     padding-bottom: 100%;
     margin-right: 55px;
     max-height: 600px;
-    /*margin: 0 auto;*/
 
     @include onDeskTop {
       height: 600px;
@@ -39,10 +71,6 @@
     position: absolute;
     width: 100%;
     padding-bottom: 30px;
-    height: 410px;
-    margin-left: 30px;
-    margin-right: 30px;
-
     object-fit: cover;
     object-position: top;
 
@@ -55,6 +83,20 @@
 
     @include onDeskTop {
       height: 600px;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+  }
+
+  &__photo-center {
+    @include onTablet {
+      display: grid;
+      grid-column: 1/10;
+    }
+
+    @include onDeskTop {
+      display: grid;
+      grid-column: 5/13;
     }
   }
 
