--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -76,15 +76,12 @@
   }
 
   &-date {
-    /*display: inline-block;*/
-    /*padding-left: 130px;*/
     white-space: nowrap;
     font-weight: 700;
     font-size: 16px;
     line-height: 16px;
     color: #1a5a4c;
     text-align: right;
-    /*margin-bottom: 32px;*/
   }
 
   &-name {
@@ -96,8 +93,27 @@
     line-height: 28px;
     color: #0f0e08;
     letter-spacing: 1.5px;
-    text-align: center;
-    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(26, 90, 76, 0.25);
+    padding-bottom: 50px;
+    margin-top: 10px;
+    white-space: nowrap;
+
+    @include onDeskTop {
+      margin-top: 23px;
+    }
+  }
+
+  &-names {
+    display: flex;
+    // justify-content: center;
+    width: 100%;
+    padding-bottom: 15px;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 28px;
+    color: #0f0e08;
+    letter-spacing: 1.5px;
+    // text-align: center;
   }
 
   &-content {
@@ -121,30 +137,33 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding: 100px;
+    padding: 24px 20px;
     margin-top: 448px;
-    width: 80vw;
-    max-width: 100%;
+    width: 90%;
 
     @include onDeskTop {
-      width: 60vw;
+      width: 50%;
     }
 
     background-color: #fff;
-    margin-bottom: 200px;
 
     &--top {
       display: flex;
-      gap: 20px;
-      justify-content: space-between;
+      gap: 15px;
 
       @include onDeskTop {
-        gap: 130px;
+        gap: 90px;
       }
     }
   }
 }
 
 .top {
-  margin: 20px;
+  margin-bottom: 20px;
+
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
 }
