museum landing was added

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,33 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin on320 {
+  @media (min-width: 320px) {
+    @content;
   }
+}
+
+@mixin on768 {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin on1280 {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin schedule-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+
+  color: #fff;
+}
+
+@mixin schedule-text-black {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+
+  color: $colorBlack;
 }
