subscription-add button arrow, bugfix lections, bugfix fonts

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -21,9 +21,13 @@
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 100%;
     color: #0f0e08;
+
+    @include onTablet {
+      font-size: 48px;
+    }
   }
 
   &__date-name {
@@ -38,10 +42,14 @@
   &__subtitle {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 100%;
     color: #0f0e08;
     margin: 0;
+
+    @include onTablet {
+      font-size: 36px;
+    }
   }
 
   &__text {
