--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/events";
+@import "blocks/lecture";
 @import "blocks/subscription";
 @import "blocks/form-field";
 @import "blocks/footer";
