--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,20 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "../../node_modules/slick-carousel/slick/slick.css";
+
+@import "../styles/mixins.scss";
+@import "../styles/variables.scss";
+@import "../styles/block/grid.scss";
+@import "../styles/block/footer.scss";
+@import "../styles/block/header.scss";
+@import "../styles/block/page.scss";
+@import "../styles/block/container.scss";
+@import "../styles/block/logo.scss";
+@import "../styles/block/museum.scss";
+@import "../styles/block/event.scss";
+@import "../styles/block/about.scss";
+@import "../styles/block/lection.scss";
+@import "../styles/block/gallery.scss";
+@import "../styles/block/subscription.scss";
+@import "../styles/block/menu.scss";
