--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,7 +2,7 @@
   &__container {
     
     @include onDesctop {
-      width: 70%;
+      width: 80%;
       display: flex;
       justify-content: flex-start;
       gap: 32px;
@@ -114,9 +114,8 @@
   }
 
   &__position {
-    
 
-    &__link {
+    &--link {
       @extend %text;
       font-weight: 400;
       font-size: 14px;
@@ -132,29 +131,20 @@
   }
 
   &__nav {
-    width: 50%;
+    width: 100%;
 
     &--last-child {
       margin-bottom: 80px;
     }
-
-    @include onTable {
-      width: 100%;
-    }
   }
 
   &__list {
+    margin: 0;
+    padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     gap: 20px;
-
-    @include onTable {
-      justify-content: space-around;
-    }
-
-    @include onDesctop {
-      gap: 52px;
-    }
   }
 
   &__item {
@@ -184,6 +174,15 @@
       flex-direction: row-reverse;
       justify-content: space-between;
       align-items: center;
+    }
+  }
+
+  &__nav-container {
+    padding-top: 40px;
+    display: flex;
+
+    @include onDesctop {
+      gap: 102px;
     }
   }
 }
