--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,11 +10,15 @@
     padding-bottom: 200px;
   }
 
+  &--with-menu {
+    overflow: hidden;
+  }
+
   &__wrapper {
     position: relative;
     margin-bottom: 20px;
     height: 100vh;
-    background-image: url(../images/Museum.jpg);
+    background-image: url(../images/museum.svg);
     background-size: cover;
     background-position: center;
 
