--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,8 @@
   background-position: center;
 
   &--close {
-    position: relative;
+    position: absolute;
+    top: 32px;
     width: 12px;
     height: 12px;
     background-image: url(../images/close.svg);
