--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 399px;
+  height: 100vh;
   background: #1a5a4c;
   transform: translate(-100%);
   transition: transform 1s;
@@ -44,11 +44,20 @@
         align-items: flex-start;
       }
     }
+
+    &--first-child {
+      padding-top: 26px;
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-start;
+    }
   }
 
   &__list {
+    margin: 0;
+    padding: 0;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     gap: 24px;
   }
 
