--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -30,7 +30,7 @@
     width: 24px;
     height: 24px;
 
-    background-image: url(../images/menu_cross.png);
+    background-image: url(../images/menu_cross.svg);
     background-position: center;
     background-repeat: no-repeat;
   }
