Added focus-effect for submit email

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -78,6 +78,10 @@
       &:active {
         transform: scale(0.9);
       }
+
+      &:focus {
+        border: 1px solid #fff;
+      }
     }
   }
 
