--- a/src/styles/blocks/sidebar.scss
+++ b/src/styles/blocks/sidebar.scss
@@ -42,6 +42,7 @@
     flex-basis: 100%;
     max-width: 336px;
     margin: 0 auto;
+    padding: 0 20px;
     
     font-weight: 500;
     font-size: 16px;
