--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
 $c-gray: #eee;
+$color-main: #1a5a4c;
+
+$padding-tablet: 30px;
+$gridgap-tablet: 30px;
+$padding-desktop: 40px;
+$gridgap-desktop: 30px;
+
+$animationSpeed: 0.3s;
