--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -144,6 +144,12 @@
         line-height: 150%;
         color: $colorBlack;
         margin-top: 20px;
+        text-decoration: none;
+        border-bottom: 1px solid transparent;
+
+        &:hover {
+          border-bottom: 1px solid #000;
+        }
       }
     }
 
