--- a/src/styles/block/subscription.scss
+++ b/src/styles/block/subscription.scss
@@ -1,6 +1,6 @@
 .subscription {
   background-image: url(../images/subscription.svg);
-  width: 320px;
+  width: 100%;
   height: 386px;
   margin: 0 auto;
 
