fix image and button

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -74,6 +74,11 @@
     width: 100%;
     object-fit: cover;
     object-position: center;
+    transition: transform 1s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTable {
       height: 520px;
