--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -104,6 +104,15 @@
     }
   }
 
+  &__day-off {
+    @extend %text;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 150%;
+    color: $color-text;
+    width: 80%;
+  }
+
   &__contact {
     @extend %text;
     margin-bottom: 20px;
