--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -45,6 +45,11 @@
     height: auto;
     object-fit: cover;
     object-position: center;
+    transition: transform 1s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTable {
       width: 50%;
