--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -14,6 +14,7 @@
     line-height: 100%;
     color: #687480;
     transform: rotate(-90deg) translate(-100%);
+    text-decoration: none;
     
 
     @include onDesctop {
@@ -34,6 +35,8 @@
 
   &__wrapper {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 
     @include onDesctop {
@@ -43,6 +46,9 @@
 
   &__ticket {
     @extend %text;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 50px;
     width: 100%;
     font-size: 16px;
@@ -50,6 +56,7 @@
     border: 1px solid #1a5a4c;
     color: $color-text;
     cursor: pointer;
+    text-decoration: none;
 
     @include onTable {
       height: 70px;
