--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
-body {
-  background: $c-gray;
-}
+@import "./utils/reset";
+@import "./utils/variables";
+@import "./utils/mixins";
+
+@import "./blocks/page";
+@import "./blocks/header";
+@import "./blocks/menu";
+@import "./blocks/art-museum";
+@import "./blocks/actual";
+@import "./blocks/gallery";
+@import "./blocks/subscribe";
+@import "./blocks/footer";
+
+@import "./blocks/container";
