Museum page second fixing

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -55,7 +55,18 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
+    
+  }
+
+  &__links {
     color: $colorMidBlack;
+    text-decoration: none;
+
+    transition: 0.3s;
+
+    &:hover {
+      text-shadow: 1px 1px 3px $colorMidBlack;
+    }
   }
 
   &__content-container {
