--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -104,8 +104,14 @@
     border: 1px solid transparent;
     cursor: pointer;
 
+    transition: 0.3s;
+
     @include OnDesctopAndLaptop {
       margin-left: 20px;
+    }
+
+    &:hover {
+      background-color: $colorDarkYellow;
     }
   }
 }
