change form submit function

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -96,6 +96,10 @@
 
     box-sizing: border-box;
 
+    &:focus {
+      outline: none;
+    }
+
     @include onTablet {
       width: 374px;
       height: 70px;
