--- a/src/styles/blocks/_actual.scss
+++ b/src/styles/blocks/_actual.scss
@@ -81,8 +81,8 @@
       transition: $transitionTime;
 
       &:hover {
-        transform: scale(1.1);
-        box-shadow: 20px 20px 15px rgba(50, 50, 50, 1.5);
+        transform: scale(1.03);
+        box-shadow: 5px 5px 10px rgba(50, 50, 50, 1);
         border-radius: 50px 10px;
       }
     }
@@ -196,7 +196,7 @@
       width: 280px;
       height: 140px;
 
-      background-color: #fff;
+      background-color: $lightColor;
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
       transform: translateY(110%);
@@ -216,7 +216,7 @@
 
       &:hover {
         box-sizing: border-box;
-        box-shadow: 20px 20px 15px rgba(50, 50, 50, 1.5);
+        box-shadow: 5px 5px 10px rgba(50, 50, 50, 1);
         border: 1px solid black;
         border-radius: 50px 10px;
       }
