--- a/src/styles/blocks/_art-museum.scss
+++ b/src/styles/blocks/_art-museum.scss
@@ -146,6 +146,8 @@
       font-weight: 500;
       font-size: 16px;
       line-height: 100%;
+
+      transition: $transitionTime;
     }
 
     &-arrow {
@@ -166,8 +168,14 @@
       transition: $transitionTime;
     }
 
+    &:hover > &-text {
+      background-color: rgba(26, 90, 76, 1);
+      color: $lightColor
+      ;
+    }
+
     &:hover > &-arrow {
-      transform: scale(-100%) rotate(360deg) translateX(-30px);
+      transform: translateX(30px);
     }
   }
 }
