--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -116,7 +116,7 @@
       transition: $transitionTime;
 
       &:hover {
-        transform: rotate(180deg);
+        transform: translateX(20px);
       }
     }
   }
