--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./bloks/page.scss";
+@import "./bloks/grid.scss";
+@import "./bloks/header.scss";
+@import "./bloks/menu.scss";
+@import "./bloks/content.scss";
+@import "./bloks/footer.scss";
