fix bgc and logo and gallery with footer

--- a/src/styles/blocks/arrow.scss
+++ b/src/styles/blocks/arrow.scss
@@ -6,6 +6,12 @@
   height: 50px;
   border: 1px solid #1a5a4c;
   border-radius: 50px;
+  transition: all 1s;
+  
+  &:hover {
+    border-color: aqua;
+    background-color: aqua;
+  }
 
   &__item {
     width: 10px;
