--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,6 +6,7 @@
       display: flex;
       justify-content: flex-start;
       gap: 32px;
+      padding-top: 48px;
     }
   }
 
@@ -15,6 +16,7 @@
     @include onTable {
       display: flex;
       justify-content: space-between;
+      align-items: flex-start;
       gap: 60px;
       border-bottom: 1px solid rgba(26, 90, 76, 0.5);
       padding-bottom: 64px;
@@ -38,6 +40,10 @@
       flex-direction: column;
       justify-content: flex-start;
       gap: 62px;
+    }
+
+    @include onDesctop {
+      margin-top: 0;
     }
   }
 
@@ -191,7 +197,9 @@
     display: flex;
 
     @include onDesctop {
+      padding-top: 0;
       gap: 102px;
+      padding-left: 65px;
     }
   }
 }
