--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -22,6 +22,10 @@
 
   &__container {
 
+    @include onTable {
+      margin-left: 38px;
+    }
+
     &:first-child {
       margin-bottom: 24px;
       padding-bottom: 24px;
@@ -33,6 +37,10 @@
         margin-right: 38px;
         height: 50%;
         margin-top: 40px;
+
+        @include onDesctop {
+          margin-right: 102px;
+        }
       }
     }
 
@@ -50,6 +58,10 @@
       display: flex;
       justify-content: space-around;
       align-items: flex-start;
+
+      @include onTable {
+        padding-top: 0;
+      }
     }
   }
 
@@ -72,6 +84,11 @@
     line-height: 100%;
     text-decoration: none;
     color: #fff;
+    transition: color 1s;
+
+    &:hover {
+      color: aqua;
+    }
 
     @include onDesctop {
       font-size: 22px;
@@ -84,7 +101,8 @@
     @include onTable {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
+      // align-items: flex-start;
+      align-items: center;
     }
   }
 
