--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import "utils/mixins";
+
 @import "blocks/page.scss";
 @import "blocks/header.scss";
+@import "blocks/menu.scss";
 @import "blocks/logo.scss";
+@import "blocks/icon.scss";
+@import "blocks/container.scss";
