--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,7 +1,4 @@
 .menu {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   background-color: #3f5252;
 
   &__content {
@@ -16,5 +13,84 @@
     margin-bottom: 80px;
     justify-items: auto;
     align-items: center;
+  }
+
+  &__info {
+    margin: 0 0 20px;
+
+    &--last {
+      margin-bottom: 40px;
+    }
+
+    &-title {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 140%;
+      display: flex;
+      align-items: center;
+      color: #f1f5f4;
+    }
+
+    &-link {
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 150%;
+      display: flex;
+      align-items: center;
+      color: #f1f5f4;
+    }
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  &__item {
+    margin-bottom: 20px;
+    &:last-child {
+      padding-bottom: 45px;
+      border-bottom: 1px solid #f1f5f4;
+    }
+  }
+
+  &__link {
+    font-family: "Playfair Display", serif;
+    text-decoration: none;
+    font-weight: 700;
+    line-height: 150%;
+    font-size: 20px;
+    align-items: center;
+    color: #f1f5f4;
+  }
+
+  &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #cd4d31;
+    border: 1px solid transparent;
+    width: 100%;
+    height: 60px;
+    font-family: inherit;
+    font-size: 16px;
+    line-height: 100%;
+    font-weight: 600;
+    color: #f1f5f4;
+
+    cursor: pointer;
+
+    transition: 0.3s;
+
+    &:hover {
+      background: #af3419;
+    }
+
+    &:active {
+      background: #ea340d;
+    }
+
   }
 }
