--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "blocks/page.scss";
 @import "blocks/header.scss";
 @import "blocks/menu.scss";
+@import "blocks/button.scss";
 @import "blocks/logo.scss";
 @import "blocks/icon.scss";
 @import "blocks/container.scss";
