--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,11 +1,13 @@
 .menu {
   background-color: #fff;
+  z-index: 1;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   transition: all 0.3s;
 
   @include smartphone {
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
     background-size: cover;
+    background-position: center;
     opacity: 0;
     transition: opacity 1s;
   }
@@ -26,7 +28,7 @@
 
     @include smartphone {
       flex-direction: column;
-      height: 450px;
+      height: 53vh;
       background-color: rgba(255, 255, 255, 0.75);
     }
   }
