--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,8 @@
 @import "./blocks/header.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/page.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/footer.scss";
