--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,15 @@
 .header {
   display: flex;
-  height: 650px;
+  height: 655px;
   font-family: "Montserrat", sans-serif;
+
+  @include tablet {
+    height: 385px;
+  }
 
   @include smartphone {
     flex-direction: column-reverse;
+    height: unset;
   }
 
   &__logo {
@@ -13,10 +18,27 @@
     top: 15px;
     left: 50%;
     transform: translateX(-50%);
+
+    &-element {
+      transition: all 0.5s;
+    }
+
+    &:hover {
+      transform: translateX(-50%) scale(1.05);
+    }
+
+    &:hover .header__logo-element--1 {
+      transform: translateX(-50%) translateY(50%);
+    }
+
+    &:hover .header__logo-element--2 {
+      transform: translateX(50%) translateY(-50%);
+    }
   }
 
   &__indent {
     min-width: 34px;
+    max-width: 180px;
     flex-basis: 0;
     flex-grow: 1;
 
@@ -29,7 +51,12 @@
     position: relative;
     width: 500px;
 
+    @include tablet {
+      max-width: 230px;
+    }
+
     @include smartphone {
+      max-width: unset;
       position: static;
       width: unset;
       display: flex;
@@ -65,6 +92,12 @@
     font-size: 72px;
     line-height: 72px;
 
+    @include tablet {
+      font-size: 55px;
+      top: 135px;
+      right: -107px;
+    }
+
     @include smartphone {
       position: static;
       margin: 20px;
@@ -89,7 +122,12 @@
     flex-grow: 1;
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
     background-size: cover;
-    background-position: top 0 left 0;
+    background-position: center;
+
+    @include smartphone {
+      // flex-grow: 0;
+      max-height: 53vh;
+    }
   }
 
   &__buy-button {
@@ -103,6 +141,11 @@
     width: 220px;
     text-decoration: none;
     transition: all 0.5s;
+
+    @include tablet {
+      top: 290px;
+      right: 10px;
+    }
 
     @include smartphone {
       position: static;
@@ -139,6 +182,10 @@
     &:hover {
       border-color: $color-grey;
       width: 328px;
+
+      @include tablet {
+        width: 300px;
+      }
 
       & .header__buy-button-text::before {
         content: "Купити квитки";
