--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -4,4 +4,15 @@
   line-height: 36px;
   color: #0f0e08;
   text-decoration: none;
+
+  @include smartphone {
+    font-size: 30px;
+  }
+}
+
+%image-hover {
+  transition: transform 0.3s;
+  &:hover {
+    transform: scale(1.05);
+  }
 }
