--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,5 +1,17 @@
+@mixin largeScreen {
+  @media (min-width: 1680px) {
+    @content;
+  }
+}
+
+@mixin notebook {
+  @media (max-width: 1280px) {
+    @content;
+  }
+}
+
 @mixin tablet {
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (max-width: 1220px) {
     @content;
   }
 }
