--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -61,5 +61,9 @@
     border: none;
     background-color: $decoration-color;
     cursor: pointer;
+
+    &:hover {
+      @include hover;
+    }
   }
 }
