--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -7,9 +7,16 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+  }
 
-    &:hover {
-      font-weight: 600;
+  &__contacts {
+    &:hover .contact-us__contact {
+      opacity: 0.8;
+    }
+
+    &:hover .contact-us__contact:hover {
+      opacity: 1;
+      text-shadow: -0.3px 0.3px 0;
     }
   }
 }
