--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -137,7 +137,11 @@
   &__tickets-block {
     display: flex;
     height: 50px;
-    background-color: #000;
+    text-decoration: none;
+
+    &:hover {
+      @include hover;
+    }
 
     @include smartphone {
       width: 270px;
@@ -168,7 +172,6 @@
     justify-content: center;
     align-items: center;
     color: #fff;
-    text-decoration: none;
     background-color: $colorfull;
   }
 
