--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -144,13 +144,22 @@
         }
 
         &_text {
+          display: flex;
+          flex-direction: column;
           font-family: "IBM Plex Sans", sans-serif;
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
           line-height: 150%;
           color: #0f0e08;
+
+          &_link {
+            &:hover {
+              transform: scale(1.05) translateX(10px);
+            }
+          }
         }
+
       }
 
       &_bottom {
@@ -199,6 +208,7 @@
           font-size: 14px;
           line-height: 100%;
           color: #0f0e08;
+          
         }
       }
     }
@@ -303,6 +313,9 @@
       text-decoration: none;
       width: 130px;
 
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 
