--- a/src/styles/bloks/menu.scss
+++ b/src/styles/bloks/menu.scss
@@ -71,6 +71,10 @@
           display: block;
           width: 100px;
 
+          &:hover {
+            transform: scale(1.05);
+          }
+
           &_link {
             text-decoration: none;
             font-family: "IBM Plex Sans", sans-serif;
