--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -83,7 +83,6 @@
       &_social {
         display: flex;
         gap: 27px;
-        // margin-bottom: 40px;
 
         &_link {
 
@@ -312,9 +311,11 @@
       display: block;
       text-decoration: none;
       width: 130px;
+      transition: font-weight 0.3s;
 
       &:hover {
-        transform: scale(1.05);
+        color: #1a5a4c;
+        font-weight: bold;
       }
     }
   }
