--- a/src/styles/bloks/menu.scss
+++ b/src/styles/bloks/menu.scss
@@ -71,10 +71,6 @@
           display: block;
           width: 100px;
 
-          &:hover {
-            transform: scale(1.05);
-          }
-
           &_link {
             text-decoration: none;
             font-family: "IBM Plex Sans", sans-serif;
@@ -83,6 +79,10 @@
             font-size: 16px;
             line-height: 100%;
             color: #fff;
+
+            &:hover {
+              color: #f14a27;
+            }
           }
         }
       }
