--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -76,8 +76,7 @@
     }
 
     @include notebook {
-      left: 0;
-      margin-bottom: 0;
+      display: contents;
     }
   }
 
@@ -107,6 +106,14 @@
       width: 100%;
       height: 600px;
       margin-bottom: 30px;
+    }
+
+    @include design {
+      height: 650px;
+    }
+
+    @include fullHD {
+      height: 750px;
     }
   }
 
