--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,11 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%footer-menu_title {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: $main-color;
+  margin-bottom: 20px;
+}
