--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -1,6 +1,10 @@
 .about-us {
   padding: 88px 0;
-  background-image: url(../images/about-us.png);
+  background-image: url(../images/About-us/about-us.png);
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
   &--transparent {
     opacity: 0.5;
@@ -8,6 +12,27 @@
 
   @include smartphone {
     padding: 82px 0;
+    background-image: url(../images/About-us/about-us_smartphone.png);
+  }
+
+  @include notebook {
+    padding: 163px 0;
+    background-image: url(../images/About-us/about-us_notebook.png);
+  }
+
+  @include design {
+    padding: 242px 0;
+    background-image: url(../images/About-us/about-us_design.png);
+  }
+
+  @include fullHD {
+    padding: 300px 0;
+    background-image: url(../images/About-us/about-us_fullHD.png);
+  }
+
+  @include largeScreen {
+    padding: 400px 0;
+    background-image: url(../images/About-us/about-us_largeScreen.png);
   }
 
   &__content {
@@ -28,6 +53,10 @@
     @include smartphone {
       line-height: 18px;
       margin-bottom: 64px;
+    }
+
+    @include notebook {
+      margin-bottom: 72px;
     }
   }
 
