--- a/src/styles/bloks/content.scss
+++ b/src/styles/bloks/content.scss
@@ -411,6 +411,7 @@
           background-color: #f14a27;
           border: 1px solid #f14a27;
           width: 50px;
+          cursor: pointer;
         }
       }
     }
