--- a/src/styles/bloks/footer.scss
+++ b/src/styles/bloks/footer.scss
@@ -154,7 +154,7 @@
 
           &_link {
             &:hover {
-              transform: scale(1.05) translateX(10px);
+              color: #f14a27;
             }
           }
         }
@@ -207,6 +207,10 @@
           font-size: 14px;
           line-height: 100%;
           color: #0f0e08;
+
+          &:hover {
+            color: #f14a27;
+          }
           
         }
       }
@@ -314,8 +318,7 @@
       transition: font-weight 0.3s;
 
       &:hover {
-        color: #1a5a4c;
-        font-weight: bold;
+        color: #f14a27;
       }
     }
   }
