--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -5,16 +5,8 @@
     margin-bottom: 0;
   }
 
-  &__title {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: $main-color;
-    margin-bottom: 20px;
-
-    &--top {
-      color: #fff;
-    }
+  &__title--top {
+    color: #fff;
   }
 
   &__container {
