added: full header block, full exhibitions block

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -24,4 +24,13 @@
     background: #ea340d;
   }
 
+  @include onTablets {
+    width: 330px;
+    height: 60px;
+  }
+
+  @include onDesctop {
+    width: 270px;
+    height: 60px;
+  }
 }
