--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -25,6 +25,18 @@
     text-align: center;
 
     color: #f1f5f4;
+
+    &::after {
+      content: "";
+      display: block;
+      height: 4px;
+      width: 8px;
+
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-image: url(../images/language_after.png);
+    }
   }
 
   &__menu {
