--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,8 +1,16 @@
+p,
+h1,
+h2 {
+  margin: 0;
+}
+
 .page {
   font-family: "Raleway", sans-serif, "Playfair Display", serif;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
+    min-width: 320px;
   }
 
   &__menu {
@@ -17,5 +25,64 @@
     &:target {
       transform: translateX(0);
     }
+  }
+
+  &__section {
+    margin-bottom: 90px;
+
+  }
+
+  &__section--special {
+    margin: 0;
+    background-color: #3f5252;
+    padding: 50px 20px;
+  }
+
+  &__section-title {
+    font-family: "Playfair Display", serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 125%;
+    display: flex;
+    align-items: center;
+    color: #1c1b29;
+
+    margin-bottom: 60px;
+
+    @include onTablets {
+      font-weight: 700;
+      font-size: 40px;
+      line-height: 125%;
+    }
+
+    @include onDesctop {
+      font-weight: 700;
+      font-size: 48px;
+      line-height: 120%;
+    }
+  }
+
+  &__section--special-title {
+    font-family: "Playfair Display", serif;
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 100%;
+
+    display: flex;
+    align-items: center;
+
+    color: #f1f5f4;
+
+    margin-bottom: 20px;
+  }
+
+  &__section--special-paragraph {
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #f1f5f4;
+
+    margin-bottom: 40px;
   }
 }
