added: full news, events block

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -34,8 +34,22 @@ h2 {
 
   &__section--special {
     margin: 0;
+    height: 35vh;
     background-color: #3f5252;
     padding: 50px 20px;
+    margin-bottom: 90px;
+
+    @include onTablets {
+      height: 50vh;
+    }
+
+    @include onDesctop {
+      background-image: url(../images/special_photo.png);
+      background-repeat: no-repeat;
+      display: flex;
+      justify-content: end;
+      align-items: center;
+    }
   }
 
   &__section-title {
@@ -53,6 +67,7 @@ h2 {
       font-weight: 700;
       font-size: 40px;
       line-height: 125%;
+      margin-bottom: 70px;
     }
 
     @include onDesctop {
@@ -73,7 +88,19 @@ h2 {
 
     color: #f1f5f4;
 
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+
+    @include onTablets {
+      font-weight: 700;
+      font-size: 62px;
+      line-height: 100%;
+    }
+
+    @include onDesctop {
+      font-weight: 700;
+      font-size: 80px;
+      line-height: 100%;
+    }
   }
 
   &__section--special-paragraph {
@@ -84,5 +111,14 @@ h2 {
     color: #f1f5f4;
 
     margin-bottom: 40px;
+
+    @include onTablets {
+      margin-bottom: 40px;
+      width: 450px;
+    }
+
+    @include onDesctop {
+      width: 470px;
+    }
   }
 }
