--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,24 +1,45 @@
-.exhibitions {
+.events {
   display: flex;
+
   flex-direction: column;
   padding: 0 20px;
 
   @include onTablets {
-    flex-direction: row;
     justify-content: center;
     gap: 30px;
-    padding: 0 40px;
+    padding: 0;
+
+    &__first {
+      display: flex;
+      gap: 30px;
+    }
+
+    &__second {
+      display: flex;
+      gap: 30px;
+    }
+
+    &__content {
+      width: 100%;
+    }
+
+    &__photo {
+      width: 100%;
+    }
   }
 
   @include onDesctop {
-    flex-direction: row;
     justify-content: center;
     gap: 30px;
-    padding: 0 55px;
+    padding: 0;
   }
 
   &__photo {
     margin-bottom: 20px;
+
+    @include onDesctop {
+      margin-bottom: 20px;
+    }
   }
 
   &__photo-image {
@@ -54,6 +75,10 @@
     color: #504f5e;
 
     margin-bottom: 30px;
+
+    @include onTablets {
+      margin-bottom: 50px;
+    }
   }
 
   &__button {
