--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -1,4 +1,4 @@
-.exhibitions {
+.news {
   display: flex;
   flex-direction: column;
   padding: 0 20px;
@@ -27,9 +27,10 @@
   &__date {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    color: #cd4d31;
+    font-size: 14px;
+    line-height: 140%;
+
+    color: #1c1b29;
 
     margin-bottom: 10px;
   }
