--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,9 @@
 @import "blocks/menu.scss";
 @import "blocks/button.scss";
 @import "blocks/logo.scss";
+@import "blocks/news.scss";
 @import "blocks/icon.scss";
 @import "blocks/container.scss";
+@import "blocks/events.scss";
 @import "blocks/exhibitions.scss";
+@import "blocks/footer.scss";
