added: form for contact block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,4 +10,5 @@
 @import "blocks/container.scss";
 @import "blocks/events.scss";
 @import "blocks/exhibitions.scss";
+@import "blocks/contact.scss";
 @import "blocks/footer.scss";
