Add a favicon and disable page scrolling

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background-color: $colourGray;
+  background-color: $colourGreen;
 
   &__content {
     box-sizing: border-box;
@@ -40,14 +40,14 @@
     font-weight: 500;
     font-size: 22px;
     line-height: 100%;
-    color: #1d1d1d;
+    color: #fff;
     text-decoration: none;
     letter-spacing: 2px;
     text-transform: uppercase;
     transition: border-color 0.3s;
 
     &:hover {
-      border-color: #1d1d1d;
+      border-color: #fff;
     }
   }
 }
