added: footer and some hover efects

--- a/src/styles/blocks/contact.scss
+++ b/src/styles/blocks/contact.scss
@@ -8,6 +8,7 @@
     margin-bottom: 30px;
     border: none;
     border-bottom: 1px solid #1c1b29;
+    background-color: #fff;
 
     outline: none;
 
