--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -34,7 +34,7 @@
 
   &__nav--content {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     gap: 40px;
     align-items: center;
   }
