--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -19,6 +19,12 @@
 
   &__photo {
     margin-bottom: 20px;
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__photo-image {
