--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -3,11 +3,23 @@
   max-width: 1170px;
   padding: 0 20px;
 
+  &:last-child {
+    margin: 0;
+  }
+
   @include onDesctop {
     padding-left: 56px;
+
+    &:last-child {
+      margin: 0 auto;
+    }
   }
 
   @include onTablets {
     padding: 20px 40px 0;
+
+    &:last-child {
+      margin: 0 auto;
+    }
   }
 }
