--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -37,6 +37,12 @@
   &__photo {
     margin-bottom: 20px;
 
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
     @include onDesctop {
       margin-bottom: 20px;
     }
