--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -98,6 +98,11 @@
     font-size: 20px;
     align-items: center;
     color: #f1f5f4;
+    transition: color 1s;
+
+    &:hover {
+      color: aqua;
+    }
 
     @include onTablets {
       font-size: 48px;
