--- a/src/styles/bloks/content.scss
+++ b/src/styles/bloks/content.scss
@@ -38,10 +38,10 @@
         background-size: contain;
         width: 280px;
         height: 210px;
-        transition: transform 0.5s;
+        transition: transform 1s;
 
         &:hover {
-          transform: scale(1.2);
+          transform: scale(0.95);
         }
 
         @include onTablet {
@@ -139,10 +139,10 @@
     background-repeat: no-repeat;
     background-image: url(../images/action/3.jpg);
 
-    transition: transform 0.5s;
+    transition: transform 1s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(0.95);
     }
 
     &_text {
@@ -248,14 +248,20 @@
 
       &_box {
 
+        transition: transform 1s;
+
+        &:hover {
+          transform: scale(0.95);
+        }
+
         &_img {
           width: 280px;
           height: 410px;
 
-          transition: transform 0.5s;
+          transition: transform 1s;
 
           &:hover {
-            transform: scale(1.2);
+            transform: scale(0.95);
           }
 
           @include onTablet {
@@ -280,6 +286,12 @@
           @include onTablet {
             width: 340px;
             height: 543px;
+
+            transition: transform 1s;
+
+            &:hover {
+              transform: scale(0.95);
+            }
           }
         }
       }
@@ -302,10 +314,10 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          transition: transform 0.5s;
+          transition: transform 1s;
 
           &:hover {
-            transform: scale(1.2);
+            transform: scale(0.95);
           }
         }
       }
@@ -330,10 +342,10 @@
 
           object-fit: cover;
           object-position: center;
-          transition: transform 0.5s;
+          transition: transform 1s;
 
           &:hover {
-            transform: scale(1.2);
+            transform: scale(0.95);
           }
         }
       }
