--- a/src/styles/bloks/page.scss
+++ b/src/styles/bloks/page.scss
@@ -2,13 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 
 .page {
   display: flex;
 
   scroll-behavior: smooth;
+  width: 100vw;
 
   &_content-with-menu {
     overflow: hidden;
