--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -7,6 +7,8 @@
     @include onDesktop {
       display: flex;
       flex-direction: row;
+      max-width: 1170px;
+      margin: 0 auto;
     }
   }
 
@@ -251,7 +253,8 @@
     @include onDesktop {
       flex-direction: row;
       justify-content: space-between;
-      margin: 0 55px 20px;
+      max-width: 1170px;
+      margin: 0 auto 20px;
     }
 
     &--text {
