--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -11,7 +11,8 @@
 
     @include onTablet {
       text-align: start;
-      margin-left: 20px;
+      max-width: 1170px;
+      margin: 0 auto 40px;
     }
   }
 
@@ -44,9 +45,10 @@
     display: none;
 
     @include onDesktop {
+      max-width: 1170px;
+      margin: 0 auto 200px;
       display: grid;
       gap: 38px;
-      margin: 0 20px 200px;
       grid-template-columns: repeat(11, minmax(70px, 1fr));
     }
 
