--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -1,6 +1,7 @@
 .header {
   box-sizing: border-box;
-
+  width: 1270px;
+  margin: 0 auto;
   &__menu-opener {
     position: absolute;
     top: 33px;
