--- a/src/styles/block/museum.scss
+++ b/src/styles/block/museum.scss
@@ -2,7 +2,9 @@
   @include onTablet {
     display: flex;
     flex-direction: row-reverse;
-    width: 100%;
+    // width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
   }
 
   &__img {
